[workspace]
members = [
  "lux-lib",
  "lux-cli",
  "lux-lua",
  "lux-definitions",
  "lux-macros",
  "lux-workspace-hack",
  "xtask",
  "xtask-lua",
]
default-members = ["lux-cli", "lux-lib"]
resolver = "2"

[workspace.package]
version = "0.38.0"

[workspace.dependencies]
mlua = { version = "0.11", features = [
  "serialize",
  "macros",
  "error-send",
  "async",
] }
mlua-extras = { version = "11.6", features = ["mlua", "macros", "async"] }
git2 = { version = "0.21", features = ["ssh", "https"] }
ignore = "0.4"
indicatif = "0.18"
itertools = "0.15"
lux-workspace-hack = { version = "0.1", path = "./lux-workspace-hack" }
lux-macros = { version = "0.2", path = "./lux-macros" }
miette = { version = "7.6", features = ["derive"] }
path-absolutize = "4.0"
path-slash = "0.2"
pathdiff = "0.2"
serde_json = { version = "1.0", features = ["preserve_order"] }
strum = { version = "0.28" }
strum_macros = "0.28"
stylua = { version = "2.3", features = [
  "fromstr",
  "luau",
  "lua52",
  "lua53",
  "lua54",
  "luajit",
  "editorconfig",
] }
target-lexicon = "0.13"
tempfile = "3.27"
toml = "1.0"
tokio = { version = "1.52", features = ["full"] }
walkdir = "2.5"
which = "8.0"
zip = "8.6"

[profile.release]
lto = true
codegen-units = 1
