[package]
name = "lux-cli"
version.workspace = true
description = "A luxurious package manager for Lua"
authors = ["vhyrro <vhyrro@gmail.com>", "mrcjkb <marc@jakobi.dev>"]
homepage = "https://github.com/lumen-oss/lux"
repository = "https://github.com/lumen-oss/lux"
license = "LGPL-3.0+"
readme = "../README.md"
keywords = ["lua", "luarocks", "neovim", "packagemanager", "build"]
categories = ["development-tools", "command-line-utilities"]
exclude = ["resources/test/**"]
edition = "2021"

[[bin]]
name = "lx"
test = false
bench = false

[dependencies]
base32 = "0.5"
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.6"
edit = { version = "0.1", features = ["quoted-env"] }
emmylua_check = { version = "0.23", features = [] }
emmylua_formatter = { version = "0.24", features = [] }
emmylua_codestyle = "0.6.0"
inquire = "0.9"
miette = { workspace = true, features = ["fancy"] }
nucleo = "0.5"
octocrab = "0.54"
open = "5.3"
spdx = "0.13"
spinners = { version = "4.2", features = ["osc-progress"] }
shlex = "2.0"
termcolor = "1.4"
termtree = "1.0"
text_trees = "0.1"
totp-rs = "5.7"
url = "2.5"
whoami = "2.1"

git2 = { workspace = true }
ignore = { workspace = true }
indicatif = { workspace = true }
itertools = { workspace = true }
lux-workspace-hack = { workspace = true }
path-absolutize = { workspace = true }
path-slash = { workspace = true }
pathdiff = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
stylua = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
walkdir = { workspace = true }
which = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
serial_test = { version = "3.5" }
assert_fs = "1.1"

[dependencies.lux-lib]
version = "0.50.0"
path = "../lux-lib/"
features = ["clap"]

[features]
default = ["gpgme"]
gpgme = ["lux-lib/gpgme"]
vendored = ["lux-lib/vendored"]
ssh-tests = ["lux-lib/ssh-tests"]

[lints.clippy]
panic = "warn"
unwrap_used = "warn"
expect_used = "warn"

# Improve miette backtrace performance in debug mode
[profile.dev.package.backtrace]
opt-level = 3
