[package]

name = "lux-lib"
version = "0.49.2"
description = "Library for the lux package manager for Lua"
authors = ["vhyrro <vhyrro@gmail.com>", "mrcjkb <marc@jakobi.dev>"]
repository = "https://github.com/lumen-oss/lux"
homepage = "https://lux.lumen-labs.org"
license = "LGPL-3.0+"
readme = "../README.md"
keywords = ["lua", "luarocks", "neovim", "packagemanager", "build"]
categories = ["development-tools"]
exclude = ["tests/**", "resources/test/**"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.1"
bon = { version = "3.9", features = ["implied-bounds"] }
bytes = "1.11"
cc = { version = "1.2", features = ["parallel"] }
chumsky = "0.13"
clap = { version = "4.6", features = ["derive"], optional = true }
clean-path = "0.2"
diffy = "0.5"
directories = "6.0"
flate2 = "1.1"
fs_extra = "1.3"
futures = "0.3"
glob = "0.3"
hex = { version = "0.4" }
html-escape = "0.2"
httpdate = "1.0"
infer = "0.22"
is_executable = "1.0"
lazy_static = "1.5"
lets_find_up = "0.0"
md5 = "0.8"
nix-nar = "0.5"
nonempty = { version = "0.12", features = ["serialize"] }
openssl = "0.10"
pkg-config = "0.3"
remove_dir_all = "1.0"
reqwest = { version = "0.13", default-features = false, features = [
  "http2",
  "charset",
  "system-proxy",
  "query",
  "json",
  "multipart",
] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde-enum-str = "0.5"
sha2 = "0.11"
shell-words = "1.1"
shlex = "2.0"
ssri = "9.2"
tar = "0.4"
thiserror = "2.0"
toml_edit = "0.25"
tree-sitter = "0.26"
tree-sitter-config = "0.26"
# NOTE: The default qjs-rt feature of tree-sitter-generate
# includes a dependency on rquickjs, which brings in a dependency on libclang.
tree-sitter-generate = { version = "0.26", default-features = false, features = [
  "load",
  "pathdiff",
] }
tree-sitter-loader = "0.26"
url = "2.5"
vfs = "0.13"

git2 = { workspace = true }
ignore = { workspace = true }
indicatif = { workspace = true }
itertools = { workspace = true }
lux-macros = { workspace = true }
lux-workspace-hack = { workspace = true }
miette = { workspace = true }
path-slash = { workspace = true }
pathdiff = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
stylua = { workspace = true }
target-lexicon = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
walkdir = { workspace = true }
which = { workspace = true }
zip = { workspace = true }


gpgme = { version = "0.11", optional = true }
ottavino = "0.4.0"
ottavino-util = "0.4.0"
serde-value = "0.7.0"
auth-git2 = "0.6.0"

[dev-dependencies]
httptest = { version = "0.16" }
serial_test = { version = "3.5" }
proptest = "1.11"
dir-diff = "0.3"
insta = { version = "1.47", features = ["redactions", "yaml", "json"] }
assert_fs = "1.1"
predicates = "3.1"

[features]
default = [
  "reqwest/native-tls", # depends on OpenSSL
]
clap = ["dep:clap"]
gpgme = ["dep:gpgme"]
vendored = ["vendored-openssl", "vendored-libgit2"]
vendored-openssl = ["openssl/vendored", "reqwest/native-tls-vendored"]
vendored-libgit2 = ["git2/vendored-libgit2"]
ssh-tests = []

[lints.clippy]
panic = "warn"
unwrap_used = "warn"
expect_used = "warn"
