[package]
name = "lux-lua"
version.workspace = true
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mlua = { workspace = true }
path-absolutize = { workspace = true }
itertools = { workspace = true }
path-slash = { workspace = true }
strum = { workspace = true }
serde = { version = "1", features = ["derive"] }
ssri = "9.2"
url = "2.5"
serde-enum-str = "0.5.0"
inventory = { version = "0.3", optional = true }
mlua-extras.workspace = true

[dependencies.lux-lib]
version = "0.49.2"
path = "../lux-lib"

[dev-dependencies]
assert_fs = "1.1"
tokio = { workspace = true }
zip = { workspace = true }

[features]
module = ["mlua/module"]
lua51 = ["mlua/lua51"]
lua52 = ["mlua/lua52"]
lua53 = ["mlua/lua53"]
lua54 = ["mlua/lua54"]
lua55 = ["mlua/lua55"]
luajit = ["mlua/luajit"]
# NOTE: mlua/vendored and mlua/module are mutually exclusive,
# so we have two different vendored features
vendored-module = [
  "module",
  "lux-lib/vendored-openssl",
  "lux-lib/vendored-libgit2",
]
vendored-definitions = [
  "definitions",
  "mlua/vendored",
  "lux-lib/vendored-openssl",
  "lux-lib/vendored-libgit2",
]
# Run tests without module mode so we can link against Lua and run the tests.
test = ["lua51"]
ssh-tests = ["lux-lib/ssh-tests"]
definitions = ["dep:inventory"]

[lints.clippy]
panic = "warn"
unwrap_used = "warn"
expect_used = "warn"
