[package]
name = "lux-macros"
version = "0.2.0"
edition = "2021"
description = "Proc-macro crate for lux"
repository = "https://github.com/lumen-oss/lux"
homepage = "https://lux.lumen-labs.org"
license = "LGPL-3.0+"

[lib]
proc-macro = true

[dependencies]
lux-workspace-hack = { workspace = true }
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
